Using squarer product images to avoid edge bleeds

--- a/app/assets/stylesheets/products/_show.sass
+++ b/app/assets/stylesheets/products/_show.sass
@@ -30,7 +30,7 @@
   flex: 1 0 1.75rem
 
   &:after
-    border-radius: 50%
+    border-radius: 2.5rem
     background-color: #fff
     border: 0.5rem solid #831a50
     content: ''
@@ -48,13 +48,14 @@
     margin-right: 0.75rem
   
     &:after
+      border-radius: 0.35rem
       border: none
 
   img
     max-height: 100%
     max-width: 100%
     padding: 10%
-    border-radius: 100%
+    border-radius: 20%
 
 .product-info
   padding-top: 2rem
